argocd/infra/k8s-jwks-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-jwks-proxy
  name: k8s-jwks-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-jwks-proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: k8s-jwks-proxy
    spec:
      serviceAccountName: k8s-jwks-proxy
      automountServiceAccountToken: true
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      affinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: node-role.kubernetes.io/control-plane
                  operator: Exists
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: k8s-jwks-proxy
          image: harbor.yanello.net/ghcr/gawsoftpl/k8s-jwks-proxy:v1.1.1@sha256:7a029467f4c465ee3b1821f76ecb9140667d1f0a81ad55fcf6dca1faf2f9cfbc
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
