argocd/infra/k8s-jwks-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-jwks-proxy
  name: k8s-jwks-proxy
spec:
  type: ClusterIP
  selector:
    app: k8s-jwks-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
