argocd/infra/k8s-jwks-proxy/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-jwks-proxy-http-route
  namespace: k8s-jwks-proxy
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - k8s.yanello.net
  rules:
    - backendRefs:
        - name: k8s-jwks-proxy
          group: ""
          kind: Service
          port: 8080
          weight: 1
      matches:
        - path:
            type: Exact
            value: /openid/v1/jwks
        - path:
            type: Exact
            value: /.well-known/openid-configuration
