argocd/infra/k8s-jwks-proxy/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8s-jwks-proxy
spec:
  endpointSelector:
    matchLabels:
      app: k8s-jwks-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toServices:
        - k8s:
            serviceName: kubernetes
            namespace: default
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
